First Assignment Sea Turtle
First attempt to create a web page

--- a/index.html
+++ b/index.html
@@ -2,10 +2,40 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>inTrainng first project</title>
+<title>inTrainng first project Sea Turtles</title>
 </head>
 
 <body>
-	<hi>Hello</hi>
+	
+	
+	
+	<h1><strong><em>Sea Turtles in Texas</em></strong></h1>
+	<hr>
+<img src="Images/seaturtle.jpg" alt="Sea Turtle in Ocean">
+		
+	<hr>
+	<h2><mark>Five</mark> of the seven known sea turtle species can be found along the Texas coast.</h2>
+	<hr>
+<h3>They include the Green Sea Turtle, the Loggerhead Sea Turtle, the Leatherback Sea Turtle, the Kemp's Ridley Sea Turtle and the Hawksbill Sea Turtle.</h3>
+	<hr>
+	
+	
+	<img src= "Images/noteeth.jpg" alt="Sea Turtle eating">
+		 
+	<hr>
+	
+	<p1>Did you know that turtles do not have teeth? Their beak structures helps each species with their diet. </p1>
+
+	<hr>
+	<p2>They can travel <strong>thousands of miles</strong> around the ocean.</p2>
+
+	<hr>
+	<img src= "Images/babyturtle.jpg" alt= "recently hatched baby sea turtles"
+	<hr>
+	<hr>
+	<p3><em>Nesting temperatures </em> determine the sex of the turtle. <em> Warmer </em> temperatures mean more females while <em> cooler </em> temperatures mean more males.</p3>
+	
+	
+	
 </body>
 </html>
